--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -110,17 +110,16 @@ hr
     .has-list::after
       position: absolute
       content: ''
-      width: 10px
-      height: 10px
+      width: 1vh
+      height: 1vh
       background: $aubergine
       bottom: -5px
       left: 50%
-      border-radius: 10px
+      border-radius: 1vh
       transform: translateX(-50%)
 
   .today
     position: absolute
-    height: 100%
     background: $Mork-aubergine
     color: white
     border-radius: 5px
