--- a/_sass/categories.sass
+++ b/_sass/categories.sass
@@ -8,8 +8,8 @@
   width: 100%
   transition: all 300ms ease-in-out
 
-.show
-  top: 22.1vh
+  &.show
+    top: 22.1vh
 
 .information-view
   position: relative
