--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,10 +1,12 @@
 .planner-grid {
   position: relative;
+  width: 90%;
+  margin: 0 auto;
   display: grid;
   margin-top: 3.5vh;
   grid: 12%/repeat(8, 1fr);
   text-align: center;
-  grid-gap: 2.5%;
+  grid-gap: .5%;
   grid-template-areas: "pil . text text text text chat handleliste"; }
   .planner-grid img {
     height: 100%;
@@ -19,6 +21,6 @@
   .planner-grid #chat-icon {
     grid-area: chat;
     margin: 0 auto; }
-  .planner-grid #handleliste-icon {
+  .planner-grid .handleliste-icon {
     grid-area: handleliste;
     margin: 0 auto; }
