--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -8,6 +8,10 @@
 
 {{> burger}}
 
+  <div class="burger">
+    <img src="/imgs/icon/handleliste-burger-large.png" alt="burgermenu">
+  </div>
+
   <div class="container">
     <div class="calendar-title">
       <p id="title">Planleggeren</p>
