--- a/views/week.hbs
+++ b/views/week.hbs
@@ -7,8 +7,10 @@
 
 {{#> layout }}
 
-  {{> headerplanner}}
+{{> burger}}
 
+  {{> headerplanner}}
+<div class="container">
   <div class="content">
     <div class="week-container">
       <div class="week-header">
@@ -41,5 +43,5 @@
       {{> categories}}
     </div>
   </div>
-
+</div>
 {{/layout}}
