--- a/public/css/burger.css
+++ b/public/css/burger.css
@@ -27,51 +27,68 @@
   .side-overlay .burger-choice {
     display: grid;
     grid: auto/repeat(2, 1fr);
-    text-align: center; }
+    text-align: center;
+    font-size: 2em; }
+    .side-overlay .burger-choice .active {
+      color: black;
+      background: #f0f0ec; }
   .side-overlay h2 {
     margin: 0 10%;
     font-size: 1.7em;
-    border: 2px solid #f0f0ec; }
+    border: 2px solid #f0f0ec;
+    border-radius: 10px;
+    -webkit-transition: 200ms all;
+    transition: 200ms all; }
   .side-overlay.show {
     right: 0; }
 
+.shoppinglist-hidden {
+  opacity: 0;
+  display: none; }
+
 .shoppinglist-container {
+  opacity: 1;
   width: 90%;
-  margin: 0 auto; }
+  margin: 20px auto;
+  font-size: 2em;
+  background: #f0f0ec;
+  border-radius: 10px;
+  -webkit-transition: 200ms all;
+  transition: 200ms all; }
+  .shoppinglist-container .shoppinglist-header {
+    height: 2em;
+    position: relative;
+    background: #413746;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px; }
+    .shoppinglist-container .shoppinglist-header .icon {
+      position: absolute;
+      right: 10px;
+      height: calc(100% - 20px);
+      margin: 10px; }
+  .shoppinglist-container .list-date {
+    padding-top: 10px;
+    margin-left: 15px;
+    color: #9B9B9B; }
+  .shoppinglist-container .list-name {
+    margin-left: 15px;
+    padding-bottom: 10px; }
 
 .container.overlay {
   -webkit-filter: blur(3px);
           filter: blur(3px); }
 
 .burger {
+  position: absolute;
   height: 50px;
   width: 70px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  position: absolute;
   right: 60px;
-  font-size: 1em;
-  color: #2d2832;
-  z-index: 2000; }
-  .burger div {
-    width: 100%;
-    height: 7px;
-    background: #2d2832;
-    border-radius: 3px;
-    -webkit-transition: 300ms ease-in-out;
-    transition: 300ms ease-in-out; }
-  .burger.close div:nth-child(2) {
-    opacity: 0; }
-  .burger.close div:nth-child(1) {
-    -webkit-transform: translateY(16.5px) rotate(45deg);
-            transform: translateY(16.5px) rotate(45deg); }
-  .burger.close div:nth-child(3) {
-    -webkit-transform: translateY(-16.5px) rotate(-45deg);
-            transform: translateY(-16.5px) rotate(-45deg); }
+  z-index: 0;
+  -webkit-transition: z-index 200ms ease-in 150ms;
+  transition: z-index 200ms ease-in 150ms; }
+  .burger.close {
+    z-index: 1001; }
+
+.burger-title {
+  font-size: 2.7em;
+  margin-left: 10%; }
