--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -114,17 +114,16 @@ hr {
     .cal .date .has-list::after {
       position: absolute;
       content: '';
-      width: 10px;
-      height: 10px;
+      width: 1vh;
+      height: 1vh;
       background: #8255c3;
       bottom: -5px;
       left: 50%;
-      border-radius: 10px;
+      border-radius: 1vh;
       -webkit-transform: translateX(-50%);
               transform: translateX(-50%); }
   .cal .today {
     position: absolute;
-    height: 100%;
     background: #413746;
     color: white;
     border-radius: 5px;
