--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -5,9 +5,8 @@
   width: 100%;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out; }
-
-.show {
-  top: 22.1vh; }
+  .category-container.show {
+    top: 22.1vh; }
 
 .information-view {
   position: relative;
