Burger menu responsiveness
Not added button for week view yet.

--- a/_sass/burger.sass
+++ b/_sass/burger.sass
@@ -38,7 +38,7 @@
 
   h2
     margin: 0 10%
-    font-size: 1.7em
+    font-size: 2vh
     border: 2px solid $Lys-varmgra
     border-radius: 10px
     transition: 200ms all
@@ -54,7 +54,7 @@
     opacity: 1
     width: 90%
     margin: 20px auto
-    font-size: 2em
+    font-size: 1.7vh
     background: $Lys-varmgra
     border-radius: 10px
     transition: 200ms all
