--- a/views/partials/product-list-item.hbs
+++ b/views/partials/product-list-item.hbs
@@ -1,5 +1,5 @@
 <div class="product-list-container" data-pid={{documentId}} data-kolonialid={{data.id}}>
-	<img id="product-image" src="{{data.images.0.thumbnail.url}}" alt="">
+	<img id="product-image" src="{{data.images.thumbnail}}" alt="">
 	<h1 id="product-name">{{data.name.full}}</h1>
 	<p id="price">{{data.price.gross}},- | {{data.price.gross_unit}}kr/{{data.price.unit_quantity_abbreviation}}</p>
 	<div id="quantity-block">
