--- a/views/partials/product-item.hbs
+++ b/views/partials/product-item.hbs
@@ -1,13 +1,12 @@
-
-{{#section 'head'}}
-  <link rel="stylesheet" href="/css/product-item.css">
-{{/section}}
-
 <li class="product-container">
   <img id="product-image" src="{{product.images.thumbnail}}" alt="">
   <h1 id="product-name">{{product.name}}</h1>
   <h1 id="price-per-unit">kr {{product.price.gross}}</h1>
   <img id="add-button" src="/imgs/icon/Velg vare.png" alt="">
-  <span></span>
+  <div id="quantity-block">
+    <img id="add-button" src="/imgs/icon/pluss-large.png" />
+    <input id="amount" type="number" value="{{amount}}" min="0"></input>
+    <img id="sub-button" src="/imgs/icon/minus-large.png" />
+  </div>
   <h2 id="price-quantity">kr {{product.price.gross_unit}}</h2>
 </li>
