--- a/views/week.hbs
+++ b/views/week.hbs
@@ -3,6 +3,7 @@
 {{!-- Tillfällig lösning för att ta static files --}}
   <script src="/js/week.js" type="text/javascript"></script>
   <script src="/js/shoppinglist.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="/css/product-item.css">
   <link rel="stylesheet" href="/css/week.css">
   <link rel="stylesheet" href="/css/product-list-item.css">
 {{/section}}
