--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -1,8 +1,7 @@
 {{#section 'head'}}
   <link rel="stylesheet" href="/css/categories.css">
-  <script type="text/javascript" src="/js/category.js">
-
-  </script>
+  <link rel="stylesheet" href="/css/product-item.css">
+  <script type="text/javascript" src="/js/category.js"></script>
 {{/section}}
 
 <div class="category-container">
@@ -19,7 +18,7 @@
       <!--Legg inn forstørrelsesglass-->
       <input type="text" id="search-t" onkeyup="searchTerm()" placeholder="Søk i tusenvis av varer">
     </div>
-    <div class="inspiration-container">
+    {{!-- <div class="inspiration-container">
       <ul class="inspiration-border">
         <li>Familiemiddag</li>
         <li>Helgekos</li>
@@ -27,7 +26,7 @@
         <li>Gjester</li>
         <li>Høytid</li>
       </ul>
-    </div>
+    </div> --}}
 
     <div class="categories">
       <ul class="category-list">
