--- a/views/partials/product-item.hbs
+++ b/views/partials/product-item.hbs
@@ -2,7 +2,7 @@
   <img id="product-image" src="{{product.images.thumbnail}}" alt="">
   <h1 id="product-name">{{product.name}}</h1>
   <h1 id="price-per-unit">kr {{product.price.gross}}</h1>
-  <img id="add-button" src="/imgs/icon/Velg vare.png" alt="">
+  <img id="include-button" src="/imgs/icon/Velg vare.png" alt="">
   <div id="quantity-block">
     <img id="add-button" src="/imgs/icon/pluss-large.png" />
     <input id="amount" type="number" value="{{amount}}" min="0"></input>
