--- a/_sass/categories.sass
+++ b/_sass/categories.sass
@@ -27,7 +27,8 @@
   margin-top: 3vh
   height: 6vh
   display: grid
-  grid-template-columns: 15vh auto 15vh
+  grid-template-columns: 1fr 8fr 1fr
+  justify-items: center
   align-items: center
 
 .information-event-header
@@ -35,7 +36,6 @@
 
 .back-arrow
   position: relative
-  margin-left: 3.5vh
   height: 2.5vh
 
 .search-title
@@ -98,12 +98,16 @@
   position: absolute
   width: 100%
   margin-top: 2vh
-  height: 47vh
+  height: 45vh
   list-style: none
   font-size: 2.5vh
   overflow: scroll
   display: grid
   grid-template-rows: repeat(1, 7fr)
+
+  ul
+    margin: 0
+    padding: 0
 
 .inspiration-categories
   margin-top: -7vh
