--- a/_sass/product-item.sass
+++ b/_sass/product-item.sass
@@ -3,60 +3,79 @@
   width: 90%
   height: 8vh
   margin: 0 auto
-  position: relative
   display: grid
-  grid-template-columns: 8vh auto 15vh 7vh
+  grid-template-columns: 8vh auto 10vh 5vh
   grid-template-rows: 50% 50%
   grid-template-areas: "prodImg name pricePerUnit iconImg" "prodImg description price iconImg"
+  column-gap: 10px
   border-bottom: 1px solid $Varmgra
 
-  img
-    width: 100%
+  &.selected
+    grid-template-columns: 8vh auto 10vh 12vh
+    grid-template-areas: "prodImg name name iconImg" "prodImg pricePerUnit price iconImg"
 
-  h1
-    font-size: 2.1vh
-    font-family: "GT Walsheim Regular"
-    font-weight: 300
+    #price-per-unit
+      text-align: left
+      color: $Varmgra
+    #price-quantity
+      text-align: left
+      color: $Varmgra
+    
+    #include-button
+      visibility: hidden
+    #quantity-block
+      visibility: visible
 
-  h2
-    font-size: 2.1vh
-    font-family: "GT Walsheim Regular"
-    font-weight: 300
-    color: $Varmgra
+  *
+    margin: 0
+    padding: 0
 
   #product-image
-    position: relative
-    height: 80%
-    width: 100%
-    margin: 0 auto
-    top: 1vh
+    max-width: 90%
+    max-height: 90%
     grid-area: prodImg
+    align-self: center
+    justify-self: center
 
 
   #product-name
-    position: absolute
+    max-width: 100%
+    font-size: 0.85em
+    line-height: 2.2em
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
     grid-area: name
 
   #price-per-unit
-    position: absolute
+    text-align: right
+    font-size: 0.85em
+    line-height: 2.2em
     grid-area: pricePerUnit
-    right: 0
+  
+  #price-quantity
+    text-align: right
+    font-size: 0.85em
+    line-height: 2.2em
+    grid-area: price
 
-  #add-button
-    grid-area: iconImg
-    position: relative
-    top: 2vh
+  #include-button
     height: 3.5vh
     width: 3.5vh
-    margin: 0 auto
+    grid-area: iconImg
+    align-self: center
+    justify-self: center
 
-  #price-som
-    position: absolute
-    grid-area: description
-    top: -1.5vh
+  #quantity-block
+    grid-area: iconImg
+    visibility: hidden
+    display: flex
+    justify-content: space-around
+    align-items: center
 
-  #price-quantity
-    position: absolute
-    grid-area: price
-    right: 0
-    top: -1.5vh
+    #amount
+      background: none
+      border: none
+      width: 100%
+      text-align: center
+      font-size: 0.8em
