Adding of items now functioning
still no loading animation for user feedback

small fixes in Shoppinglist logic

--- a/_sass/product-item.sass
+++ b/_sass/product-item.sass
@@ -11,7 +11,7 @@
   border-bottom: 1px solid $Varmgra
 
   &.selected
-    grid-template-columns: 8vh auto 10vh 12vh
+    grid-template-columns: 8vh 6vh auto 12vh
     grid-template-areas: "prodImg name name iconImg" "prodImg pricePerUnit price iconImg"
 
     #price-per-unit
