added partial for creating or editing shopping list

--- a/views/partials/burger-shopping-list.hbs
+++ b/views/partials/burger-shopping-list.hbs
@@ -3,3 +3,14 @@
     <script src="/js/burger.js"></script> 
 {{/section}}
 
+
+<div class="shadow"></div>
+
+
+<div class="side-overlay">
+
+    <h1 class="burger-title">{{#if list}}Rediger{{else}}Opprett ny liste{{/if}}</h1>
+
+    <hr>
+
+</div>
