--- a/_sass/burger.sass
+++ b/_sass/burger.sass
@@ -99,3 +99,11 @@
 .burger-title
   font-size: 2.7em
   margin-left: 10%
+
+.burger-list-container
+  font-size: 2vh
+  width: 90%
+  margin: 0 auto
+  display: grid
+  grid: repeat(4, auto) / 1fr
+  grid-gap: 2vh
