--- a/_sass/categories.sass
+++ b/_sass/categories.sass
@@ -134,9 +134,20 @@
   z-index: 2
   transition: all 300ms ease-in-out
 
-.change-button
-  background-color: $white
-  top: -10vh
+  &.change-button
+    background-color: $white
+    top: -10vh
+
+    .pluss-icon
+      opacity: 0
+
+  .pluss-icon
+    position: absolute
+    height: 35%
+    top: 0
+    right: 0
+    transition: all 300ms ease-in-out
+
 
 
 .button-white
