--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -6,6 +6,7 @@
 
 <div class="category-container">
   <div class="icon-button">
+    <img class="pluss-icon" src="/imgs/icon/AddItemsPlusIcon.png">
     <img class="button-white" src="/imgs/icon/AddProductBlack.png" alt="">
     <img class="add-product-button" src="/imgs/icon/AddProductWhite.png" alt="">
   </div>
