not working update button for updating name of list

--- a/views/partials/burger-shopping-list.hbs
+++ b/views/partials/burger-shopping-list.hbs
@@ -16,6 +16,7 @@
     {{#if list}}
     <label>Dato</label>
     <div type="text" class="list-date">{{list.date}}</div>
+    <button class="list-update-btn">Lagre</button>
     {{else}}
         <button class="list-add-btn">Legg til liste</button>
     {{/if}}  
