--- a/public/css/main.css
+++ b/public/css/main.css
@@ -119,3 +119,32 @@ body, html {
   .grid-large .half-width {
     position: relative;
     grid-column: span 1; }
+
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border-radius: 50%;
+  border: 8px solid transparent;
+  border-top-width: 0px;
+  border-right-color: #ffa51e;
+  -webkit-animation: spinn 1s linear infinite;
+          animation: spinn 1s linear infinite;
+  -webkit-transform: translate(-50%, -50%) rotate(0deg);
+          transform: translate(-50%, -50%) rotate(0deg); }
+
+@-webkit-keyframes spinn {
+  from {
+    -webkit-transform: translate(-50%, -50%) rotate(0deg);
+            transform: translate(-50%, -50%) rotate(0deg); }
+  to {
+    -webkit-transform: translate(-50%, -50%) rotate(360deg);
+            transform: translate(-50%, -50%) rotate(360deg); } }
+
+@keyframes spinn {
+  from {
+    -webkit-transform: translate(-50%, -50%) rotate(0deg);
+            transform: translate(-50%, -50%) rotate(0deg); }
+  to {
+    -webkit-transform: translate(-50%, -50%) rotate(360deg);
+            transform: translate(-50%, -50%) rotate(360deg); } }
