--- a/_sass/product-list-item.sass
+++ b/_sass/product-list-item.sass
@@ -1,6 +1,7 @@
 @import "./imports/colors.sass"
 
 .product-list-container
+  position: relative
   width: 90%
   height: 8vh
   margin: 0 auto
@@ -9,6 +10,9 @@
   grid-template-rows: 50% 50%
   grid-template-areas: "prodImg name amount" "prodImg price amount"
   border-bottom: 1px solid $Varmgra
+
+  &.removing
+    background-color: $Lys-varmgra
 
   #product-image
     max-height: 90%
