--- a/public/css/product-list-item.css
+++ b/public/css/product-list-item.css
@@ -1,4 +1,5 @@
 .product-list-container {
+  position: relative;
   width: 90%;
   height: 8vh;
   margin: 0 auto;
@@ -7,6 +8,8 @@
   grid-template-rows: 50% 50%;
   grid-template-areas: "prodImg name amount" "prodImg price amount";
   border-bottom: 1px solid #d7d7d2; }
+  .product-list-container.removing {
+    background-color: #f0f0ec; }
   .product-list-container #product-image {
     max-height: 90%;
     max-width: 90%;
