latest merge and working x-out in burgermenu

--- a/views/calendar.hbs
+++ b/views/calendar.hbs
@@ -9,7 +9,8 @@
 {{> burger}}
 
   <div class="burger">
-    <img src="/imgs/icon/handleliste-burger-large.png" alt="burgermenu">
+    <img class="burgermenu-icon" src="/imgs/icon/handleliste-burger-large.png" alt="burgermenu">
+    <img class="burgermenu-icon-close" src="/imgs/icon/Kryss ut.png" alt="">
   </div>
 
   <div class="container">
