--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -3,6 +3,24 @@
 hr
   width: 100%
 
+.burgermenu-icon
+  position: absolute
+  top: 0
+  opacity: 1
+  transition: all 600ms ease-in
+
+  &.display-sidebar
+    opacity: 0
+
+.burgermenu-icon-close
+  position: absolute
+  top: 0
+  opacity: 0
+
+  &.display-sidebar
+    opacity: 1
+    transition: all 600ms ease-in
+
 .calendar-title
   text-align: center
   font-size: 2.7em
