transition fix on icon, burgermenu

--- a/_sass/calendar.sass
+++ b/_sass/calendar.sass
@@ -7,7 +7,7 @@ hr
   position: absolute
   top: 0
   opacity: 1
-  transition: all 600ms ease-in
+  transition-delay: 0.15s
 
   &.display-sidebar
     opacity: 0
@@ -19,7 +19,7 @@ hr
 
   &.display-sidebar
     opacity: 1
-    transition: all 600ms ease-in
+    transition-delay: 0.15s
 
 .calendar-title
   text-align: center
