products in add menu reflect products in list

--- a/_sass/product-item.sass
+++ b/_sass/product-item.sass
@@ -40,7 +40,7 @@
 
   #product-name
     max-width: 100%
-    font-size: 0.85em
+    font-size: 2.3rem
     line-height: 2.2em
     overflow: hidden
     text-overflow: ellipsis
@@ -49,13 +49,13 @@
 
   #price-per-unit
     text-align: right
-    font-size: 0.85em
+    font-size: 2rem
     line-height: 2.2em
     grid-area: pricePerUnit
   
   #price-quantity
     text-align: right
-    font-size: 0.85em
+    font-size: 2rem
     line-height: 2.2em
     grid-area: price
 
@@ -78,4 +78,4 @@
       border: none
       width: 100%
       text-align: center
-      font-size: 0.8em
+      font-size: 2rem
