--- a/_sass/product-list-item.sass
+++ b/_sass/product-list-item.sass
@@ -6,9 +6,10 @@
   height: 8vh
   margin: 0 auto
   display: grid
-  grid-template-columns: 15% 60% 25%
+  grid-template-columns: 8vh auto 12vh
   grid-template-rows: 50% 50%
   grid-template-areas: "prodImg name amount" "prodImg price amount"
+  column-gap: 10px
   border-bottom: 1px solid $Varmgra
 
   &.removing
@@ -26,7 +27,7 @@
     grid-area: name
     max-width: 100%
     margin: 0
-    font-size: 2em
+    font-size: 2.3rem
     line-height: 2.2em
     padding-right: 20px
     overflow: hidden
@@ -37,7 +38,7 @@
     grid-area: price
     margin: 0
     color: $Varmgra
-    font-size: 1.5em
+    font-size: 2rem
     line-height: 2em
 
   #quantity-block
@@ -51,4 +52,4 @@
       border: none
       width: 100%
       text-align: center
-      font-size: 2em
+      font-size: 2rem
