--- a/public/css/product-item.css
+++ b/public/css/product-item.css
@@ -34,7 +34,7 @@
     justify-self: center; }
   .product-container #product-name {
     max-width: 100%;
-    font-size: 0.85em;
+    font-size: 2.3rem;
     line-height: 2.2em;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -42,12 +42,12 @@
     grid-area: name; }
   .product-container #price-per-unit {
     text-align: right;
-    font-size: 0.85em;
+    font-size: 2rem;
     line-height: 2.2em;
     grid-area: pricePerUnit; }
   .product-container #price-quantity {
     text-align: right;
-    font-size: 0.85em;
+    font-size: 2rem;
     line-height: 2.2em;
     grid-area: price; }
   .product-container #include-button {
@@ -73,4 +73,4 @@
       border: none;
       width: 100%;
       text-align: center;
-      font-size: 0.8em; }
+      font-size: 2rem; }
