--- a/views/partials/burger-shopping-list.hbs
+++ b/views/partials/burger-shopping-list.hbs
@@ -15,7 +15,7 @@
     
     <span>
       <label>Navn på listen</label>
-      <input type="text" class="burger-list-name" value="{{#if list}}{{list.name}}{{/if}}">
+      <input type="text" class="burger-list-name" placeholder="Some name" value="{{#if list}}{{list.name}}{{/if}}">
     </span>
     
     {{#if list}}
@@ -25,7 +25,7 @@
     {{/if}}
 
   </div>
-
-  <button id="delete-btn">Slett Listen</button>
-
+  {{#if list}}
+    <button id="delete-btn">Slett Listen</button>
+  {{/if}}
 </div>
