--- a/_sass/burger.sass
+++ b/_sass/burger.sass
@@ -169,7 +169,7 @@
       outline: none
       transition: all 300ms cubic-bezier(0.28, 0.69, 0.51, 0.87)
 
-      &:active
+      &:focus
         border-bottom-width: 4px
 
 #delete-btn
