--- a/_sass/week.sass
+++ b/_sass/week.sass
@@ -37,6 +37,15 @@
   border-bottom-right-radius: 15px
   overflow: scroll
 
+  #list-name
+    width: 100%
+    height: 8vh
+    margin: 0
+    background-color: lighten($Lys-varmgra, 4%)
+    font-size: 2rem
+    line-height: 8vh
+    padding-left: 40px
+
 li#vare
   display: flex
   position: relative
