--- a/public/css/burger.css
+++ b/public/css/burger.css
@@ -163,7 +163,7 @@
       outline: none;
       -webkit-transition: all 300ms cubic-bezier(0.28, 0.69, 0.51, 0.87);
       transition: all 300ms cubic-bezier(0.28, 0.69, 0.51, 0.87); }
-      .burger-list-container span input[type="text"]:active {
+      .burger-list-container span input[type="text"]:focus {
         border-bottom-width: 4px; }
 
 #delete-btn {
