--- a/public/css/week.css
+++ b/public/css/week.css
@@ -34,6 +34,14 @@
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   overflow: scroll; }
+  .week-list #list-name {
+    width: 100%;
+    height: 8vh;
+    margin: 0;
+    background-color: #f9f9f7;
+    font-size: 2rem;
+    line-height: 8vh;
+    padding-left: 40px; }
 
 li#vare {
   display: -webkit-box;
