html og sass for inspo side, alt er kommertert ut og beskrevet hvor det skal være

--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -70,28 +70,44 @@
 .inspiration-container {
   position: relative;
   margin: 0 auto;
-  width: 90%;
+  width: 100%;
   font-size: 2.2vh;
-  opacity: 0; }
-
-.inspiration-container-show {
   opacity: 1; }
 
 .inspiration-border {
-  position: relative;
   display: grid;
-  grid-template-columns: repeat(5, 5fr);
   grid-gap: 2.5vh;
   list-style: none;
-  overflow-x: scroll; }
+  overflow-x: scroll;
+  padding-top: 1vh;
+  border-top: solid 0.2vh #f0f0ec;
+  grid-template-columns: repeat(5, 5fr); }
 
-.inspiration-border li {
+.inspiration-choise {
+  position: relative;
+  top: -1vh;
+  display: grid;
+  grid-gap: 2.5vh;
+  list-style: none;
+  overflow-x: scroll;
+  padding-top: 1vh;
+  border-top: solid 0.2vh #f0f0ec;
+  grid-template-columns: 7.5vh auto auto 10vh; }
+
+.inspiration-container li {
   border: #f0f0ec 3px solid;
   padding: 1vh;
   border-radius: 25px; }
 
-.selected-inspiration-border {
+.activeEvent {
   background-color: #f0f0ec; }
+
+.inspiration-img {
+  position: absolute;
+  top: -10.7vh;
+  width: 100%;
+  z-index: 2;
+  opacity: 0.3; }
 
 .categories {
   position: absolute;
@@ -139,7 +155,9 @@
   transition: all 300ms ease-in-out; }
   .icon-button.change-button {
     background-color: white;
-    top: -10vh; }
+    width: 12vh;
+    height: 12vh;
+    top: -10.7vh; }
     .icon-button.change-button .pluss-icon {
       opacity: 0; }
   .icon-button .pluss-icon {
@@ -154,8 +172,8 @@
   position: absolute;
   left: 2vh;
   top: 1vh;
-  width: 50%;
-  height: 40%;
+  width: 55%;
+  height: 50%;
   opacity: 0; }
 
 .show-button {
