--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -5,6 +5,10 @@
 {{/section}}
 
 <div class="category-container">
+  <!--Denne skal inn i selve barnebursdagkategorien-->
+  <!--<div class="inspiration-header">
+    <img class="inspiration-img"src="/imgs/inspiration/insp-med-tekst.png" alt="">
+  </div>-->
   <div class="icon-button">
     <img class="pluss-icon" src="/imgs/icon/AddItemsPlusIcon.png">
     <img class="button-white" src="/imgs/icon/AddProductBlack.png" alt="">
@@ -15,19 +19,28 @@
       <img class="back-arrow" src="/imgs/icon/Pil.png" alt="">
       <h3 class="search-title">Varer</h3>
     </div>
+    <!--
     <div class="search-container">
-      <!--Legg inn forstørrelsesglass-->
       <input type="text" id="search-t" onkeyup="searchTerm()" placeholder="Søk i tusenvis av varer">
-    </div>
-    {{!-- <div class="inspiration-container">
-      <ul class="inspiration-border">
+    </div> -->
+    <!--<div class="inspiration-container">-->
+      <!--Denne skal inn rett etter at man har trykket på en av kategoriene i inspirasjon -->
+      <!--<ul class="inspiration-border">
         <li>Familiemiddag</li>
         <li>Helgekos</li>
-        <li>Selskap</li>
+        <li class="activeEvent">Selskap</li>
         <li>Gjester</li>
         <li>Høytid</li>
+      </ul>-->
+
+      <!--Denne skal inn i selve Barnebursdag kategorien -->
+      <!--<ul class="inspiration-choise">
+        <span></span>
+        <li class="activeEvent">Producter</li>
+        <li>Oppskrifter</li>
+        <span></span>
       </ul>
-    </div> --}}
+    </div>-->
 
     <div class="categories">
       <ul class="category-list">
