--- a/_sass/categories.sass
+++ b/_sass/categories.sass
@@ -17,7 +17,8 @@
   height: 60vh
   margin: 0 auto
   width: 99%
-  top: -7.5vh
+  top: 6vh
+  //-7.5vh
   // top: 6vh når du er inne i selve barnebursdagkategorien
   border-bottom-left-radius:  15px
   border-bottom-right-radius: 15px
@@ -104,14 +105,17 @@
 .activeEvent
   background-color: $Lys-varmgra
 
-.inspiration-header
-
 .inspiration-img
   position: absolute
   top: -10.7vh
   width: 100%
-  z-index: 2
-  opacity: 0.3
+  z-index: 3
+
+.inspiration-filter
+  position: relative
+  width: 7.5vh
+  height: 3.5vh
+  right: 2vh
 
 .categories
   position: absolute
@@ -169,8 +173,6 @@
     right: 0
     transition: all 300ms ease-in-out
 
-
-
 .button-white
   position: absolute
   left: 2vh
@@ -196,3 +198,16 @@
 
 .changeButton
   display: none
+
+.recipe
+  border: $Lys-varmgra 3px solid
+  margin: 0 auto
+  width: 98%
+  height: 20vh
+  display: grid
+  grid-template-rows: 5fr 2fr 1fr
+
+
+.recipe img
+  width: 100%
+  height: 10vh
