--- a/_sass/categories.sass
+++ b/_sass/categories.sass
@@ -17,9 +17,9 @@
   height: 60vh
   margin: 0 auto
   width: 99%
-  top: 6vh
+  top: -7.5vh
   //-7.5vh
-  // top: 6vh når du er inne i selve barnebursdagkategorien
+  //top: 6vh når du er inne i selve barnebursdagkategorien
   border-bottom-left-radius:  15px
   border-bottom-right-radius: 15px
   overflow: hidden
@@ -132,9 +132,6 @@
     margin: 0
     padding: 0
 
-.inspiration-categories
-  margin-top: -7vh
-
 .categories li
   display: flex
   position: relative
@@ -184,7 +181,6 @@
 .show-button
   opacity: 1
 
-
 .add-product-button
   position: absolute
   left: 1vh
@@ -199,15 +195,29 @@
 .changeButton
   display: none
 
-.recipe
-  border: $Lys-varmgra 3px solid
-  margin: 0 auto
-  width: 98%
-  height: 20vh
-  display: grid
-  grid-template-rows: 5fr 2fr 1fr
+.recipe-container
+  position: absolute
+  width: 100%
+  top: 19vh
+  overflow: scroll
+  height: 28vh
 
+.recipe
+  margin: 0 auto
+  width: 96%
+  height: 24vh
+  display: grid
+  grid-template-rows: 13vh 4vh 3vh
 
 .recipe img
+  margin: 0 auto
   width: 100%
-  height: 10vh
+  height: 15vh
+  border-radius: 25px
+  object-fit: cover
+
+.recipe-title
+  font-size: 2.7vh
+
+.recipe-description
+  font-size: 2.3vh
