--- a/views/partials/categories.hbs
+++ b/views/partials/categories.hbs
@@ -16,6 +16,9 @@
     <img class="add-product-button" src="/imgs/icon/AddProductWhite.png" alt="">
   </div>
   <div class="information-view">
+    <div class="inspiration-header">
+      <img class="inspiration-img"src="/imgs/inspiration/insp-med-tekst.png" alt="">
+    </div>
     <div class="information-header">
       <img class="back-arrow" src="/imgs/icon/Pil.png" alt="">
       <h3 class="search-title">Varer</h3>
