--- a/_sass/categories.sass
+++ b/_sass/categories.sass
@@ -24,6 +24,22 @@
   border-bottom-right-radius: 15px
   overflow: hidden
 
+  .inspiration-header
+    height: 0vh
+    overflow: hidden
+    transition: all 300ms ease-in-out
+
+    .inspiration-img
+      width: 100%
+      z-index: 3
+
+  &.inspiration
+    .inspiration-header
+      height: 20vh
+
+    .information-header
+      margin-top: 0
+
 .information-header
   width: 100%
   margin-top: 3vh
@@ -32,6 +48,8 @@
   grid-template-columns: 1fr 8fr 1fr
   justify-items: center
   align-items: center
+  overflow: hidden
+  transition: all 300ms ease-in-out
 
 .information-event-header
   margin-top: 10vh
@@ -104,12 +122,6 @@
 
 .activeEvent
   background-color: $Lys-varmgra
-
-.inspiration-img
-  position: absolute
-  top: -10.7vh
-  width: 100%
-  z-index: 3
 
 .inspiration-filter
   position: relative
