--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -18,6 +18,18 @@
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   overflow: hidden; }
+  .information-view .inspiration-header {
+    height: 0vh;
+    overflow: hidden;
+    -webkit-transition: all 300ms ease-in-out;
+    transition: all 300ms ease-in-out; }
+    .information-view .inspiration-header .inspiration-img {
+      width: 100%;
+      z-index: 3; }
+  .information-view.inspiration .inspiration-header {
+    height: 20vh; }
+  .information-view.inspiration .information-header {
+    margin-top: 0; }
 
 .information-header {
   width: 100%;
@@ -28,7 +40,10 @@
   justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center; }
+          align-items: center;
+  overflow: hidden;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
 
 .information-event-header {
   margin-top: 10vh; }
@@ -101,12 +116,6 @@
 
 .activeEvent {
   background-color: #f0f0ec; }
-
-.inspiration-img {
-  position: absolute;
-  top: -10.7vh;
-  width: 100%;
-  z-index: 3; }
 
 .inspiration-filter {
   position: relative;
