--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -18,18 +18,24 @@
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   overflow: hidden; }
-  .information-view .inspiration-header {
-    height: 0vh;
-    overflow: hidden;
-    -webkit-transition: all 300ms ease-in-out;
-    transition: all 300ms ease-in-out; }
-    .information-view .inspiration-header .inspiration-img {
-      width: 100%;
-      z-index: 3; }
   .information-view.inspiration .inspiration-header {
     height: 20vh; }
   .information-view.inspiration .information-header {
     margin-top: 0; }
+  .information-view.inspiration .search-container {
+    display: none; }
+
+.inspiration-header {
+  position: relative;
+  height: 0vh;
+  margin-top: -5vh;
+  z-index: 4;
+  overflow: hidden;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out; }
+
+.inspiration-img {
+  width: 100%; }
 
 .information-header {
   width: 100%;
@@ -67,10 +73,7 @@
   background-color: #f0f0ec;
   border-radius: 40px;
   font-size: 2.2vh;
-  opacity: 1; }
-
-.hide-search-container {
-  opacity: 0; }
+  display: block; }
 
 #search-t {
   position: relative;
