--- a/views/partials/filter-menu.hbs
+++ b/views/partials/filter-menu.hbs
@@ -1,40 +1,35 @@
 {{#section 'head'}}
-<link rel="stylesheet" href="/css/burger.css">
-<script src="/js/burger.js"></script> {{/section}}
+    <link rel="stylesheet" href="/css/filter-menu.css">
+    <script src="/js/filter.js"></script>
+{{/section}}
+
+    <div class="filter-overlay">
+        <div class="filter-list-container">
+
+            <h1 class="filter-title">Filter</h1>
 
 
-<div class="shadow"></div>
-
-
-<div class="side-overlay">
-    <div class="burger-list-container">
-        <h1 class="burger-title">Filter</h1>
-
-        <label>{{filter.price.name}}</label>
-        <div class="slider-container">
-            <input type="range" min="1" max="100" value="{{filter.price.value}}" class="slider" id="price">
-        </div>
-
-        <label>{{filter.people.name}}</label>
-        <div class="slider-container">
-            <input type="range" min="1" max="100" value="{{filter.people.value}}" class="slider" id="people">
-        </div>
-
-        <label>{{filter.theme.name}}</label>
-        <div class="filter-options">
-             {{#each filter.theme.value}}
-                <li>{{this}}</li>
-                <img class="toggle-filter" src="/imgs/icon/V-lilla.png" />
+            <div class="filter-container">
+            {{#each filter}}
+                <label>{{this.name}}</label>
+                <div class="filter">
+                    {{#each this.children}}
+                        
+                        {{#condition this.type '==' 'slider'}}
+                            <input type="range" min="1" max="100" value="{{this.value}}" class="slider">
+                        {{/condition}}
+                        
+                        {{#condition this.type '==' 'checkbox'}}
+                            <input type="checkbox" />
+                            <label>{{this.name}}</label>
+                        {{/condition}}
+                    
+                    {{/each}}
+                </div>
             {{/each}}
-        </div>
+            </div>
 
-        <label>{{filter.alergies.name}}</label>
-        <div class="filter-options">
-            {{#each filter.alergies.value}}
-            <li>{{this}}</li>
-            <img class="toggle-filter" src="/imgs/icon/V-lilla.png" /> {{/each}}
-        </div>
+            <img src="/imgs/icon/V-gra.png"/>
 
-        
+        </div>
     </div>
-</div>
