--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,20 +5,7 @@
 {{#> layout }}
 
   <div class="grid-large">
-
-    <div class="inspiration hero full-width">
-      <img src="imgs/inspiration/xmas.jpg" alt="Julevarer"/>
-      <h3>Handle til jula?</h3>
-    </div>
-
-    <div class="inspiration half-width">
-      <h3>Noe annet her</h3>
-    </div>
-
-    <div class="inspiration half-width">
-      <h3>Og noe mer her</h3>
-    </div>
-
+    <img class="index-img" src="/imgs/inspiration/nullstress.png" alt="">
   </div>
 
 {{/layout}}
