--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -18,19 +18,31 @@
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   overflow: hidden; }
-  .information-view.inspiration .inspiration-header {
-    height: 20vh; }
-  .information-view.inspiration .information-header {
-    margin-top: 0; }
-  .information-view.inspiration .search-container {
-    display: none; }
+  .information-view.inspiration {
+    overflow: visible; }
+    .information-view.inspiration .inspiration-header {
+      height: 20vh; }
+    .information-view.inspiration .information-header {
+      margin-top: -3vh; }
+    .information-view.inspiration .search-container {
+      display: none; }
+    .information-view.inspiration .inspiration-filter {
+      height: 3.5vh;
+      overflow: visible; }
+    .information-view.inspiration .categories {
+      top: 22vh;
+      height: 36vh; }
+    .information-view.inspiration .inspiration-border {
+      grid-template-columns: repeat(2, 2fr);
+      margin: 0 auto;
+      width: 60%; }
 
 .inspiration-header {
   position: relative;
   height: 0vh;
-  margin-top: -5vh;
-  z-index: 4;
+  top: -3.2vh;
   overflow: hidden;
+  z-index: 3;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out; }
 
@@ -87,44 +99,30 @@
 
 .inspiration-container {
   position: relative;
+  top: 0vh;
   margin: 0 auto;
-  width: 100%;
-  font-size: 2.2vh;
-  opacity: 1; }
+  font-size: 2.2vh; }
 
 .inspiration-border {
   display: grid;
-  grid-gap: 2.5vh;
+  overflow: scroll;
+  grid-gap: 2vh;
   list-style: none;
-  overflow-x: scroll;
-  padding-top: 1vh;
-  border-top: solid 0.2vh #f0f0ec;
+  padding-top: 2vh;
+  text-align: center;
   grid-template-columns: repeat(5, 5fr); }
 
-.inspiration-choise {
-  position: relative;
-  top: -1vh;
-  display: grid;
-  grid-gap: 2.5vh;
-  list-style: none;
-  overflow-x: scroll;
-  padding-top: 1vh;
-  border-top: solid 0.2vh #f0f0ec;
-  grid-template-columns: 7.5vh auto auto 10vh; }
-
-.inspiration-container li {
+.inspiration-event {
   border: #f0f0ec 3px solid;
   padding: 1vh;
   border-radius: 25px; }
 
-.activeEvent {
-  background-color: #f0f0ec; }
-
 .inspiration-filter {
   position: relative;
   width: 7.5vh;
-  height: 3.5vh;
-  right: 2vh; }
+  height: 0vh;
+  right: 2vh;
+  overflow: hidden; }
 
 .categories {
   position: absolute;
@@ -133,14 +131,14 @@
   height: 45vh;
   list-style: none;
   font-size: 2.5vh;
-  overflow: scroll;
+  overflow-x: visible;
   display: grid;
   grid-template-rows: repeat(1, 7fr); }
   .categories ul {
     margin: 0;
     padding: 0; }
 
-.categories li {
+.list-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
