--- a/_sass/categories.sass
+++ b/_sass/categories.sass
@@ -11,6 +11,10 @@
   &.show
     top: 22.1vh
 
+.category-list
+  width: 100%
+  overflow-y: scroll
+
 .information-view
   position: relative
   background-color: $white
@@ -104,13 +108,13 @@
 
 .inspiration-container
   position: relative
-  top: 0vh
+  width: 100%
   margin: 0 auto
   font-size: 2.2vh
 
 .inspiration-border
   display: grid
-  overflow: scroll
+  overflow-x: scroll
   grid-gap: 2vh
   list-style: none
   padding-top: 2vh
@@ -136,7 +140,7 @@
   height: 45vh
   list-style: none
   font-size: 2.5vh
-  overflow-x: visible
+  overflow-y: scroll
   display: grid
   grid-template-rows: repeat(1, 7fr)
 
