--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -8,6 +8,10 @@
   .category-container.show {
     top: 22.1vh; }
 
+.category-list {
+  width: 100%;
+  overflow-y: scroll; }
+
 .information-view {
   position: relative;
   background-color: white;
@@ -96,13 +100,13 @@
 
 .inspiration-container {
   position: relative;
-  top: 0vh;
+  width: 100%;
   margin: 0 auto;
   font-size: 2.2vh; }
 
 .inspiration-border {
   display: grid;
-  overflow: scroll;
+  overflow-x: scroll;
   grid-gap: 2vh;
   list-style: none;
   padding-top: 2vh;
@@ -128,7 +132,7 @@
   height: 45vh;
   list-style: none;
   font-size: 2.5vh;
-  overflow-x: visible;
+  overflow-y: scroll;
   display: grid;
   grid-template-rows: repeat(1, 7fr); }
   .categories ul {
