frontpage image now centes itselv and doesn't stretch

--- a/_sass/main.sass
+++ b/_sass/main.sass
@@ -28,12 +28,16 @@ body, html
   background: $white
 
 .grid-large
+  display: flex
+  justify-content: center
+  align-items: center
+  background: $eggeplomme
   width: 100%
   height: 115%
 
 .index-img
-  width: 100%
-  height: 100%
+  max-width: 100vw
+  max-height: 90vh
 
 .spinner
   position: absolute
