--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,12 +109,22 @@ body, html {
   background: white; }
 
 .grid-large {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #ffa51e;
   width: 100%;
   height: 115%; }
 
 .index-img {
-  width: 100%;
-  height: 100%; }
+  max-width: 100vw;
+  max-height: 90vh; }
 
 .spinner {
   position: absolute;
