added click events for opening and closing filer menu

--- a/_sass/filter-menu.sass
+++ b/_sass/filter-menu.sass
@@ -15,6 +15,13 @@
   border-radius: 10px
   transition: 200ms all
 
+  #filer-menu-close-btn
+    position: absolute
+    top: 4.5vw
+    right: 4.5vw
+    height: 50px
+    width: 50px
+
   &.show
     right: 0
 
