--- a/views/partials/filter-menu.hbs
+++ b/views/partials/filter-menu.hbs
@@ -5,6 +5,7 @@
 {{/section}}
 
 <div class="filter-overlay">
+  <img src="/imgs/icon/Kryss ut.png" id="filer-menu-close-btn" alt="Click to close">
   <div class="filter-list-container">
 
     <h1 class="filter-menu-title">Filter</h1>
