--- a/public/css/filter-menu.css
+++ b/public/css/filter-menu.css
@@ -14,6 +14,12 @@
   border-radius: 10px;
   -webkit-transition: 200ms all;
   transition: 200ms all; }
+  .filter-overlay #filer-menu-close-btn {
+    position: absolute;
+    top: 4.5vw;
+    right: 4.5vw;
+    height: 50px;
+    width: 50px; }
   .filter-overlay.show {
     right: 0; }
   .filter-overlay .filter-list-container {
