--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -102,21 +102,25 @@
   position: relative;
   width: 100%;
   margin: 0 auto;
-  font-size: 2.2vh; }
+  font-size: 2.2vh;
+  margin-bottom: 2vh; }
 
 .inspiration-border {
-  display: grid;
-  overflow-x: scroll;
-  grid-gap: 2vh;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
   list-style: none;
   padding-top: 2vh;
   text-align: center;
-  grid-template-columns: repeat(5, 5fr); }
+  grid-template-columns: repeat(3, 3fr); }
 
 .inspiration-event {
   border: #f0f0ec 3px solid;
   padding: 1vh;
-  border-radius: 25px; }
+  border-radius: 25px;
+  margin: 0 auto; }
 
 .inspiration-filter {
   position: relative;
