--- a/_sass/categories.sass
+++ b/_sass/categories.sass
@@ -170,6 +170,11 @@
   z-index: 2
   transition: all 300ms ease-in-out
 
+@supports (-webkit-overflow-scrolling: touch)
+  // CSS specific to iOS devices
+  .icon-button
+    top: -49vh
+
   &.change-button
     background-color: $white
     width: 12vh
