--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -2,6 +2,7 @@
 <html lang="no">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <title>{{title}}</title>
     <link rel="stylesheet" href="/css/sanitize.css">
     <link rel="stylesheet" href="/css/main.css">
